TS-3486: Crashes due to race condition on server sessions moving between threads. This closes #235

(cherry picked from commit a638d97019e1b3ef4e6ec53b93d81a96885cbb6e)
(cherry picked from commit 1a160e13e4931fbaa522339c99abfad1ce9d638c)

Conflicts:
	proxy/http/HttpSessionManager.cc